--- a/index.html
+++ b/index.html
@@ -4,12 +4,33 @@
         <meta charset="utf-8">
         <title>MiniProject</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="vendor/bootstrap-grid.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     </head>
     <body>
+        <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+            <a href="#" class="navbar-brand"> PaintDream </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mobile-menu">
+                <ul class="navbar-nav">
+                    <li class="dropdown"><a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Farby</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Satynowe</a>
+                            <a class="dropdown-item" href="#">Matowe</a>
+                            <a class="dropdown-item" href="#">Połysk</a>
+                        </div>
+                    </li>
+                    <li><a class="nav-link" href="#">Pędzle</a></li>
+                    <li><a class="nav-link" href="#">Wałki</a></li>
+                    <li><a class="nav-link" href="#">Inne akcesoria</a></li>
+                </ul>
+            </div>
+        </nav>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
