--- a/index.html
+++ b/index.html
@@ -31,6 +31,42 @@
                 </ul>
             </div>
         </nav>
+        <div id="main-slider" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="w-100" src="https://i.postimg.cc/wj2h09dk/pexels-c-tia-matos-1072179.jpg" alt="image">
+                <div class="carousel-caption">
+                    <h3 class="text-white">Odcienie</h3>
+                    <h4 class="text-white">Wszystkie odcienie kolorów</h4>
+                    <a href="#" class="btn btn-primary">Click</a>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="w-100" src="https://i.postimg.cc/Hspn3XWf/pexels-merlin-lightpainting-8442828.jpg" alt="image">
+                <div class="carousel-caption">
+                    <h3 class="text-white">Barwy</h3>
+                    <h4 class="text-white">Nasycone, jaskrawe, pełne wrażeń</h4>
+                    <a href="#" class="btn btn-primary">Click</a>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="w-100" src="https://i.postimg.cc/zGQfJQwr/pexels-faik-akmd-1025469.jpg" alt="image">
+                <div class="carousel-caption">
+                    <h3 class="text-white">Mix</h3>
+                    <h4 class="text-white">Nasz wybór mieszanek</h4>
+                    <a href="#" class="btn btn-primary">Click</a>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#main-slider" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#main-slider" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+        </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
