add cards-products for .html and .css

--- a/index.html
+++ b/index.html
@@ -67,6 +67,71 @@
               <span class="sr-only">Next</span>
             </a>
         </div>
+        <div class="products py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <h2>Farby</h2>
+                        <div class="list-group flex-sm-row flex-md-column">
+                            <a class="list-group-item list-group-item-action" href="#">Farby akwarelowe</a>
+                            <a class="list-group-item list-group-item-action" href="#">Farby plakatowe</a>
+                            <a class="list-group-item list-group-item-action" href="#">Farby olejne</a>
+                            <a class="list-group-item list-group-item-action" href="#">Farby akrylowe</a>
+                            <a class="list-group-item list-group-item-action" href="#">Farby emulsyjne (tempera)</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-9">
+                        <h2>Nowości</h2>
+                        <div class="row">
+                            <div class="col-sm-3 col-lg-4">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="https://i.postimg.cc/3JB027pC/pexels-david-waschb-sch-1887946.jpg" alt="Wiele wiaderek farb">
+                                    </div>
+                                    <div class="card-body">
+                                        <h5>Farby</h5>
+                                        <a class="btn btn-light">Sprawdź</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 col-lg-4">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="https://i.postimg.cc/L6Hn977q/pexels-pavel-danilyuk-8381874.jpg" alt="Pędzle w wiaderku">
+                                    </div>
+                                    <div class="card-body">
+                                        <h5>Pędzle</h5>
+                                        <a class="btn btn-light">Sprawdź</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 col-lg-4">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="https://i.postimg.cc/zGvvWhq8/pexels-blue-bird-7217952.jpg" alt="Wałek na tacce">
+                                    </div>
+                                    <div class="card-body">
+                                        <h5>Wałki</h5>
+                                        <a class="btn btn-light">Sprawdź</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 d-lg-none">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="https://i.postimg.cc/GhHnxxT7/pexels-thiago-miranda-3253724.jpg" alt="Mural z sprayem">
+                                    </div>
+                                    <div class="card-body">
+                                        <h5>Spreje</h5>
+                                        <a class="btn btn-light">Sprawdź</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>   
+        </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
