add containers with extra inf. to index.html

--- a/index.html
+++ b/index.html
@@ -132,6 +132,80 @@
                 </div>
             </div>   
         </div>
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card m-3 d-flex align-items-center justify-content-center">
+                        <img src="https://i.postimg.cc/d1htZcF6/pexels-cottonbro-3584992-1.jpg" alt="Inspiracja, spory wybór">
+                        <div class="card-body position-absolute">
+                            <h5 class="text-black">Szukasz inspiracji?</h5>
+                            <a class="btn btn-light">Kilka pomysłów</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card m-3 d-flex align-items-center justify-content-center">
+                        <img src="https://i.postimg.cc/HsDsnNh0/pexels-anna-nekrashevich-8533745.jpg" alt="Stylowana waza">
+                        <div class="card-body position-absolute">
+                            <h5 class="text-black">Popularne marki</h5>
+                            <a class="btn btn-light">Sprawdź</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="card m-3 d-flex align-items-center justify-content-center">
+                        <img src="https://i.postimg.cc/sg3j9hyv/pexels-christina-morillo-1181571.jpg" alt="Wiedza">
+                        <div class="card-body position-absolute">
+                            <h3 class="text-white">Po więcej informacji</h3>
+                            <a class="btn btn-light">Zajrzyj tutaj</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+         <div class="container py-5">
+            <div class="row">
+                <div class="col-md-4 col-sm-12">
+                    <div class="card p-3 mb-3">
+                        <div class="row">
+                            <div class="col-md-2 d-md-none d-lg-block d-sm-none d-none">
+                                <i class="fas fa-truck pt-4 pl-3"></i>
+                            </div>
+                            <div class="col-md-10">
+                                <h5>Darmowa dostawa</h5>
+                                <span>Powyżej określonej kwoty dostawa jest darmowa.</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <div class="card p-3 mb-3">
+                        <div class="row">
+                            <div class="col-md-2 d-md-none d-lg-block d-sm-none d-none">
+                                <i class="fas fa-money-bill-wave pt-4 pl-3"></i>
+                            </div>
+                            <div class="col-md-10">
+                                <h5>Cena - Jakość</h5>
+                                <span>Wszystkie produkty dostosowane pod Ciebie.</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <div class="card p-3 mb-3">
+                        <div class="row">
+                            <div class="col-md-2 d-md-none d-lg-block d-sm-none d-none">
+                                <i class="fas fa-life-ring pt-4 pl-3"></i>
+                            </div>
+                            <div class="col-md-10">
+                                <h5>Pomoc</h5>
+                                <span>Masz pytanie? Skontaktuj się z naszym oddziałem.</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
