add footer for index.html

--- a/index.html
+++ b/index.html
@@ -206,6 +206,56 @@
                 </div>
             </div>
         </div> 
+        <div class="container py-5">
+            <div class="row info">
+                <div class="col-md-4 col-sm-12 order-md-1 order-3">
+                    <div class="box px-5 pt-4 mb-3">
+                        <h5>Okazje i nowości</h5>
+                        <span>Podaj swoją pocztę elektroniczną w celu uzyskania ekskluzywnych i wyjątkowych ofert.</span>
+                        <div class="form-group">
+                            <input type="email" class="form-control" placeholder="Podaj email" aria-describedby="emailHelp">
+                            <span style="font-size: 11px; color: silver;">Nie rozpowszechniami Twoich danych osobowych.</span>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Wyślij</button>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 order-md-2 order-1">
+                    <div class="box px-5 pt-4 mb-3">
+                        <h5>Odwiedź nas</h5>
+                        <span>Sprawdź nasze inne media społecznościowe</span>
+                        <ul>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 order-md-3 order-2">
+                    <div class="box px-5 pt-4 mb-3">
+                        <h5>Skontaktuj się</h5>
+                        <span> tel. 765563336<br>ul. Waszyngtona 07-432 Warszawa</span>
+                        <a href="#">DreamPaint@gmail.com</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container py-3">
+            <div class="row d-flex justify-content-around">
+                <div class="col-md-4">
+                    &copy;Harbinger Ltd.
+                </div>
+                <div class="col-md-6">
+                    <ul class="list-unstyled list-inline">
+                        <li class="list-inline-item"><a href="#">About</a></li>
+                        <li class="list-inline-item"><a href="#">Delivery</a></li>
+                        <li class="list-inline-item"><a href="#">Returns</a></li>
+                        <li class="list-inline-item"><a href="#">Privacy policy</a></li>
+                        <li class="list-inline-item"><a href="#">Terms and conditions</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
